--- a/TwwiarWD/IoT-dashboard/api/package.json
+++ b/TwwiarWD/IoT-dashboard/api/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "1.20.1",
+    "dotenv": "^16.5.0",
     "ejs": "3.1.8",
     "express": "4.18.2",
     "joi": "17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "8.2.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "node-cron": "^4.1.0",
+    "nodemailer": "7.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -18,15 +21,17 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "1.9.3",
     "@types/node": "^14.18.33",
+    "axios": "^1.10.0",
     "node-gyp": "^6.1.0",
+    "nodemailer": "7.0.3",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "4.9.3"
   },
   "scripts": {
     "dev": "ts-node ./lib/index.ts",
-    "watch": "nodemon",
-    "start": "ts-node ./lib/index.ts",
+    "watch": "../../node_modules/.bin/nodemon",
+    "start": "../../node_modules/.bin/ts-node ./lib/index.ts",
     "build": "tsc"
   }
 }
